--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h2 {font-family: 'Garamond', serif;
     text-align: center; 
 }
 
-#nav ul {
+nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -27,11 +27,11 @@ h2 {font-family: 'Garamond', serif;
     background-color: #333;
 }
   
-#nav li {
+nav li {
     float: left;
 }
   
-#nav li a {
+nav li a {
     display: block;
     color: white;
     text-align: center;
@@ -39,11 +39,11 @@ h2 {font-family: 'Garamond', serif;
     text-decoration: none;
 }
 
-#nav .active {
+nav .active {
     background-color: #1e8fc4;
   }
 
-#nav li a:hover {
+nav li a:hover {
     background-color: #111;
 }
 
