--- a/style.css
+++ b/style.css
@@ -24,7 +24,9 @@ nav ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(43, 43, 43);
+    background-image: url("https://img.freepik.com/free-vector/hand-painted-watercolor-pastel-sky-background_23-2148902771.jpg?w=2000");
+    background-repeat: repeat
 }
   
 nav li {
