--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ img.icon {
 
 h1 {font-family: 'Garamond', serif; 
     font-size: 50px;
-    font-weight: 800; 
+    font-weight: 800;
     line-height: 72px; 
     margin: 10 0 24px; 
     text-align: center; 
@@ -24,9 +24,11 @@ nav ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: rgb(43, 43, 43);
-    background-image: url("https://img.freepik.com/free-vector/hand-painted-watercolor-pastel-sky-background_23-2148902771.jpg?w=2000");
-    background-repeat: repeat
+    height: auto;
+    background-image: url("https://www.pixelstalk.net/wp-content/uploads/images6/Street-Rain-Wallpaper-HD.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
   
 nav li {
