--- a/style.css
+++ b/style.css
@@ -84,6 +84,27 @@ ol, ul.tags{
   text-align: left;
 }
 
+@media only screen and (max-width: 600px) {
+  table {
+    display: block;
+  }
+  tr{
+    border:1px solid black;
+    display:block;
+  }
+  th{
+    display:none;
+  }
+  td{
+    display:inline-block;
+  }
+  #authors tr:nth-child(odd) {
+
+  }
+  #authors td {
+    border:0;
+  }
+}
 
 /*
 margin-top:5;
