--- a/style.css
+++ b/style.css
@@ -5,6 +5,17 @@ img.icon {
     margin-right: auto;
 }
 
+img.ed, img.up {
+    max-width: 30px;
+    margin: auto;
+    display: inline-block;
+}
+
+img.ed:hover, img.up:hover {
+    background-color:#aedef5;
+    border-radius: 20% 12% 20% 20%;
+}
+
 p {
     font: normal normal normal large Georgia;
     vertical-align: baseline;
@@ -150,12 +161,21 @@ ol {
   }
 }
 
-input {
+input, textarea {
+    font-family: Georgia, 'Times New Roman', Times, serif;
     width: 80%;
     margin: 3% 5%;
     border: 2px solid #1e8fc4;
     border-radius: 4px;
     box-sizing: border-box;
+    resize: vertical;
+    height: 120%;
+}
+
+input.inModal, textarea.inModal {
+    display:inline-block;
+    padding: 5%;
+    line-height:140%;
 }
 
 input:focus {
@@ -176,6 +196,11 @@ button {
 
 button:hover {
     background-color: #0f73a1;
+}
+
+button.edit, button.update {
+    padding: 0;
+    background-color: transparent;
 }
 
 /* modal CSS from https://www.w3schools.com/howto/howto_css_modals.asp */
