--- a/style.css
+++ b/style.css
@@ -23,9 +23,7 @@ p {
     text-transform: none;
     text-indent: 0;
     border-collapse: collapse;
-    margin: 2% 15%;
-    margin-top: 2%;
-    margin-bottom: 2%
+    margin: 3% 22%;
 }
 
 p:link {
@@ -46,15 +44,6 @@ h2 {font-family: 'Garamond', serif;
     font-size: xx-large;
     margin: 1% 0; 
     text-align: center;
-}
-
-@media print {
-    h3 {page-break-before: always;}
-    footer {page-break-after: unset;}
-    p {
-        orphans: 4;
-        widows: 2;
-    }
 }
 
 nav ul {
@@ -99,7 +88,8 @@ nav li a:hover {
     caption-side: top;
     font-family: Georgia, "Courier New", monospace;
     border-collapse: collapse;
-    margin: 2% 8%;
+    margin: 0 12%;
+    margin-bottom: 2%;
 }
   
 #authors td, #authors th {
@@ -173,7 +163,7 @@ input, textarea {
 }
 
 input.inModal, textarea.inModal {
-    display:inline-block;
+    display: inline-block;
     padding: 5%;
     line-height:140%;
 }
@@ -183,6 +173,9 @@ input:focus {
 }
 
 button {
+    font-family: "Georgia", sans-serif;
+    font-stretch: expanded;
+    font-weight: 500;
     background-color: #1e8fc4;
     border: none;
     color: white;
@@ -192,6 +185,7 @@ button {
     display: inline-block;
     font-size: medium;
     border-radius: 8px;
+    font-size: medium;
 }
 
 button:hover {
@@ -207,6 +201,16 @@ button.edit {
     display: none;
 }
 
+select {
+    margin-bottom: 5%;
+    border-radius: 5px;
+    padding: 0.5%;
+    font-family: "Georgia", sans-serif;
+    font-stretch: expanded;
+    font-weight: 500;
+    font-size: medium;
+}
+
 /* modal CSS from https://www.w3schools.com/howto/howto_css_modals.asp */
 .modal, .modal2 {
     display: none;
@@ -219,27 +223,26 @@ button.edit {
     overflow: auto; 
     background-color: rgb(0,0,0); 
     background-color: rgba(0,0,0,0.4); 
-  }
-  
-  .modalContent, .modalContent2 {
+}
+
+.modalContent, .modalContent2 {
     background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%; 
-  }
-  
-  .close {
+}
+
+.close {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
-  }
+}
   
-  .close:hover,
-  .close:focus {
+.close:hover, .close:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
-  }
+}
   
