--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@ img.icon {
     margin-right: auto;
 }
 
-img.ed, img.up {
+img.ed, img.up, img.del {
     max-width: 30px;
     margin: auto;
     display: inline-block;
 }
 
-img.ed:hover, img.up:hover {
+img.ed:hover, img.up:hover, img.del:hover {
     background-color:#aedef5;
     border-radius: 20% 12% 20% 20%;
 }
@@ -192,8 +192,9 @@ button:hover {
     background-color: #0f73a1;
 }
 
-button.edit {
+button.edit, button.delete {
     padding: 0;
+    margin: 5%;
     background-color: transparent;
 }
 
